[Ajay] add doctor subscriptions + hospital department assignments APIs
